--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </style>
 <body>
     <div style="width: 100%; box-shadow: 5px 5px 20px 2px #a7a7a7;">
-        <header><h1>Password generator</h1></header>
+        <header style="background: #efefef;"><h1>Password generator</h1></header>
     </div>
     <div style="padding: 1rem 0;">
         <form id="form" class="responsive" onsubmit="return generatePassword(document.getElementById('length').value, document.getElementById('useSC').checked);">
